src/objects/Weekly_Pipe_Snapshot_Detailed__c.object
<CustomObject>
    <fields>
        <fullName>Forecasted_Bookings__c</fullName>
        <label>Weighted Forecast</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Number_of_Opportunities__c</fullName>
        <label>Number of Opportunities</label>
        <precision>16</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Opportunity_Owner__c</fullName>
        <label>Opportunity Owner</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team_Group_Buckets__c</fullName>
        <label>Owner Team (Group Buckets)</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Owner_Team__c</fullName>
        <label>Owner Team</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage_Ordered__c</fullName>
        <formula>CASE( Stage__c , 
&quot;Closed Won&quot;,&quot;(a) &quot; &amp; Stage__c, 
&quot;PO received&quot;,&quot;(b) &quot; &amp; Stage__c, 
&quot;Commit&quot;,&quot;(c) &quot; &amp; Stage__c, 
&quot;Strong Upside&quot;,&quot;(d) &quot; &amp; Stage__c, 
&quot;Upside&quot;,&quot;(e) &quot; &amp; Stage__c, 
&quot;Pipeline&quot;,&quot;(f) &quot; &amp; Stage__c, 
&quot;Identify&quot;,&quot;(g) &quot; &amp; Stage__c, 
&quot;Closed Lost&quot;,&quot;(h) &quot; &amp; Stage__c, 
&quot;Unqualified&quot;,&quot;(i) &quot; &amp; Stage__c, 
&quot;Renewal&quot;,&quot;(j) &quot; &amp; Stage__c, 
Stage__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Stage Ordered</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Stage__c</fullName>
        <label>Stage</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Total_Pipeline_Capped_250K__c</fullName>
        <label>Total Pipeline (Capped 250K)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Total_Pipeline__c</fullName>
        <label>Total Pipeline</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Weekly Pipe Snapshot Detailed</label>
    <nameField>
        <label>Weekly Pipe Snapshot Detailed Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Weekly Pipe Snapshots Detailed</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>